@@ -48,7 +48,7 @@ struct conf {
     unsigned        got_force:1;        /* flag for FORCE option             */
     unsigned        got_foreground:1;   /* flag for FOREGROUND option        */
     unsigned        got_group_stat:1;   /* flag for gids stat'ing /etc/group */
-    unsigned        got_replay_retry:1; /* flag for allowing decode retries  */
+    unsigned        got_socket_retry:1; /* flag for allowing decode retries  */
     unsigned        got_root_auth:1;    /* flag if root can decode any cred  */
     munge_cipher_t  def_cipher;         /* default cipher type               */
     munge_zip_t     def_zip;            /* default compression type          */
